@@ -1,13 +1,15 @@
 package me.michaelkrauty.MCWrapper.commands;
 
+import java.io.File;
 import java.io.IOException;
 
 import me.michaelkrauty.MCWrapper.Server;
 
 public class Start {
 
+	int serverid;
+
 	public Start(String serveridString) {
-		int serverid = 0;
 		boolean inputIsInt = true;
 		try {
 			serverid = Integer.parseInt(serveridString);
@@ -19,13 +21,13 @@ public class Start {
 			System.out.println("Starting server " + serverid);
 			Server server = new Server(serverid);
 			try {
-				Process p = Runtime.getRuntime().exec(
-						"cd /home/mcwrapper/servers/"
-								+ Integer.toString(serverid)
-								+ " && java -jar /home/mcwrapper/jar/test.jar");
+				ProcessBuilder pb = new ProcessBuilder("C:/Program Files/Java/jre7/bin/java.exe", "-jar", "C:/Users/Michael/Desktop/MCWrapper/jar/test.jar");
+				pb.directory(new File("C:/Users/Michael/Desktop/MCWrapper/servers/" + serverid));
+				Process p = pb.start();
 				server.setProcess(p);
 			} catch (IOException e) {
 				System.out.println("Server directory or jar file not found!");
+				e.printStackTrace();
 			}
 		} else {
 			System.out.println("Server ID must be an integer! > 0");
